# ReSize

./: .gitignore  CMakeLists.txt  MonitorInfo.h  MonitorUtils.cpp  MonitorUtils.h  README.md  ReSize.sln  ReSize.vcxproj  ReSize.vcxproj.filters  main.cpp
docs/: README.md
include/: MonitorInfo.h  MonitorUtils.h
resource/: resource.rc
src/: MonitorUtils.cpp  main.cpp
